--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -595,7 +595,7 @@
   "pli-tv-kd13:14.3.37": "The Sangha has given the monk Udāyī probation for one offense of intentional emission of semen—concealed for five days and committed while on probation—simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:14.3.38": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:15.1.0": "1.16 Sending back to the beginning of those deserving the trial period, etc. ",
-  "pli-tv-kd13:15.1.1": "When he had completed the probation, while deserving the trial period, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:15.1.1": "When he had completed that probation, while deserving the trial period, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:15.1.2": "He told the monks, ",
   "pli-tv-kd13:15.1.3": "“I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:15.1.4": "When I had completed the probation, while deserving the trial period, I committed one offense of intentional emission of semen, concealed for five days. ",
