--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -602,8 +602,8 @@
   "pli-tv-kd13:15.1.5": "What should I do now?” ",
   "pli-tv-kd13:15.1.6": "They told the Buddha. ",
   "pli-tv-kd13:15.1.7": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one offense of intentional emission of semen—concealed for five days and committed while deserving the trial period—and it should then give him probation simultaneous with probation for the previous offense. ",
-  "pli-tv-kd13:15.1.8": "And he should be sent back to the beginning like this: ",
-  "pli-tv-kd13:15.1.9": "And he should be given probation simultaneous with probation for the previous offense like this: … ",
+  "pli-tv-kd13:15.1.8": "And he should be sent back to the beginning like this. … ",
+  "pli-tv-kd13:15.1.9": "And he should be given probation simultaneous with probation for the previous offense like this. … ",
   "pli-tv-kd13:15.1.11": "The Sangha has given the monk Udāyī probation for one offense of intentional emission of semen—concealed for five days and committed while deserving the trial period—simultaneous with the probation for the previous offense. ",
   "pli-tv-kd13:15.1.12": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
   "pli-tv-kd13:16.1.0": "1.17 Trial period for the three offenses ",
