--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -605,12 +605,12 @@
   "pli-tv-kd13:15.1.8": "And he should be sent back to the beginning like this. … ",
   "pli-tv-kd13:15.1.9": "And he should be given probation simultaneous with probation for the previous offense like this. … ",
   "pli-tv-kd13:15.1.11": "The Sangha has given the monk Udāyī probation for one offense of intentional emission of semen—concealed for five days and committed while deserving the trial period—simultaneous with the probation for the previous offense. ",
-  "pli-tv-kd13:15.1.12": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:15.1.12": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:16.1.0": "1.17 Trial period for the three offenses ",
-  "pli-tv-kd13:16.1.1": "When he had completed the probation, he told the monks, ",
+  "pli-tv-kd13:16.1.1": "When he had completed that probation, he told the monks, ",
   "pli-tv-kd13:16.1.2": "“I had committed one offense of intentional emission of semen, concealed for a half-month … ",
   "pli-tv-kd13:16.1.3": "I’ve now completed the probation. ",
-  "pli-tv-kd13:16.1.4": "What should I do now?” ",
+  "pli-tv-kd13:16.1.4": "What should I do next?” ",
   "pli-tv-kd13:16.1.5": "They told the Buddha. ",
   "pli-tv-kd13:16.1.6": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for the three offenses. ",
   "pli-tv-kd13:16.1.7": "And it should be given like this: ",
