--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -624,7 +624,7 @@
   "pli-tv-kd13:16.1.15": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:16.1.16": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:16.1.17": "He’s now completed that probation and is asking the Sangha for the trial period of six days for the three offenses. ",
-  "pli-tv-kd13:16.1.18": "If it seems appropriate to the Sangha, the Sangha should give him the trial period of six days for the three offenses. ",
+  "pli-tv-kd13:16.1.18": "If it seems appropriate to the Sangha, the Sangha should give him that trial period. ",
   "pli-tv-kd13:16.1.19": "This is the motion. ",
   "pli-tv-kd13:16.1.20": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:16.1.21": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for a half-month. … ",
