--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -645,8 +645,8 @@
   "pli-tv-kd13:17.1.6": "They told the Buddha. ",
   "pli-tv-kd13:17.1.7": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one offense of intentional emission of semen—concealed for five days and committed while undertaking the trial period—and it should then give him probation for that offense simultaneous with probation for the previous offense, and it should then give him the trial period of six days. ",
   "pli-tv-kd13:17.1.8": "And he should be sent back to the beginning like this. … ",
-  "pli-tv-kd13:17.1.9": "And he should be given probation simultaneous with probation for the previous offense like this: … ",
-  "pli-tv-kd13:17.1.10": "And he should be given the trial period of six days like this: … ",
+  "pli-tv-kd13:17.1.9": "And he should be given probation simultaneous with probation for the previous offense like this. … ",
+  "pli-tv-kd13:17.1.10": "And he should be given the trial period of six days like this. … ",
   "pli-tv-kd13:17.1.12": "The Sangha has given the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for five days and committed while undertaking the trial period. ",
   "pli-tv-kd13:17.1.13": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
   "pli-tv-kd13:18.1.0": "1.19 Sending back to the beginning of those deserving rehabilitation, etc. ",
