--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -648,9 +648,9 @@
   "pli-tv-kd13:17.1.9": "And he should be given probation simultaneous with probation for the previous offense like this. … ",
   "pli-tv-kd13:17.1.10": "And he should be given the trial period of six days like this. … ",
   "pli-tv-kd13:17.1.12": "The Sangha has given the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for five days and committed while undertaking the trial period. ",
-  "pli-tv-kd13:17.1.13": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:17.1.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:18.1.0": "1.19 Sending back to the beginning of those deserving rehabilitation, etc. ",
-  "pli-tv-kd13:18.1.1": "When he had completed the trial period, while deserving rehabilitation, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:18.1.1": "When he had completed that trial period, while deserving rehabilitation, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:18.1.2": "He told the monks, ",
   "pli-tv-kd13:18.1.3": "“I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:18.1.4": "When I had completed the trial period, while deserving rehabilitation, I committed one offense of intentional emission of semen, concealed for five days. ",
