--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -659,9 +659,9 @@
   "pli-tv-kd13:18.1.7": "“Well then, the Sangha should send the monk Udāyī back to the beginning for one offense of intentional emission of semen—concealed for five days and committed while deserving rehabilitation—and it should then give him probation for that offense simultaneous with probation for the previous offense, and it should then give him the trial period of six days. ",
   "pli-tv-kd13:18.1.8": "And he should be sent back to the beginning like this. … ",
   "pli-tv-kd13:18.1.9": "And he should be given probation simultaneous with probation for the previous offense like this. … ",
-  "pli-tv-kd13:18.1.10": "And he should be given the trial period of six days like this: … ",
+  "pli-tv-kd13:18.1.10": "And he should be given the trial period of six days like this. … ",
   "pli-tv-kd13:18.1.12": "The Sangha has given the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for five days and committed while deserving rehabilitation. ",
-  "pli-tv-kd13:18.1.13": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd13:18.1.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:19.1.0": "1.20 Rehabilitation of those with offenses concealed for a half-month ",
   "pli-tv-kd13:19.1.1": "When he had completed the trial period, he told the monks, ",
   "pli-tv-kd13:19.1.2": "“I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
