--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -663,7 +663,7 @@
   "pli-tv-kd13:18.1.12": "The Sangha has given the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for five days and committed while deserving rehabilitation. ",
   "pli-tv-kd13:18.1.13": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd13:19.1.0": "1.20 Rehabilitation of those with offenses concealed for a half-month ",
-  "pli-tv-kd13:19.1.1": "When he had completed the trial period, he told the monks, ",
+  "pli-tv-kd13:19.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:19.1.2": "“I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:19.1.3": "I’ve now completed the trial period. ",
   "pli-tv-kd13:19.1.4": "What should I do now?” ",
