--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -666,10 +666,10 @@
   "pli-tv-kd13:19.1.1": "When he had completed that trial period, he told the monks, ",
   "pli-tv-kd13:19.1.2": "“I had committed one offense of intentional emission of semen, concealed for a half-month. … ",
   "pli-tv-kd13:19.1.3": "I’ve now completed the trial period. ",
-  "pli-tv-kd13:19.1.4": "What should I do now?” ",
+  "pli-tv-kd13:19.1.4": "What should I do next?” ",
   "pli-tv-kd13:19.1.5": "They told the Buddha. ",
   "pli-tv-kd13:19.1.6": "“Well then, the Sangha should rehabilitate the monk Udāyī. ",
-  "pli-tv-kd13:19.1.7": "And it should be done like this: ",
+  "pli-tv-kd13:19.1.7": "And it should be done like this. ",
   "pli-tv-kd13:19.1.8": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
   "pli-tv-kd13:19.1.9": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for a half-month. ",
   "pli-tv-kd13:19.1.10": "I asked the Sangha for probation for a half-month for that offense, ",
