--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -678,7 +678,7 @@
   "pli-tv-kd13:19.1.13": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.14": "which it did. ",
   "pli-tv-kd13:19.1.15": "I then asked the Sangha to give me probation for that offense, simultaneous with the probation for the previous offense, ",
-  "pli-tv-kd13:19.1.16": "and the Sangha gave me that simultaneous probation. ",
+  "pli-tv-kd13:19.1.16": "which it did. ",
   "pli-tv-kd13:19.1.17": "When I had completed the probation, while deserving the trial period of six days, I committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.18": "I asked the Sangha to send me back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.19": "which it did. ",
