--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1302,16 +1302,16 @@
   "pli-tv-kd13:28.1.4": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.5": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense. ",
   "pli-tv-kd13:28.1.6": "It may be that a monk on probation commits a number of offenses entailing suspension, both concealed and unconcealed and specified. ",
-  "pli-tv-kd13:28.1.7": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:28.1.8": "He should then be given probation according to the length of the concealment of the offenses and simultaneously with the probation for the previous offense. ",
-  "pli-tv-kd13:28.1.9": "It may be that a monk on probation commits a number of offenses entailing suspension—unspecified and unconcealed … ",
-  "pli-tv-kd13:28.1.10": "unspecified and concealed … ",
-  "pli-tv-kd13:28.1.11": "unspecified and both concealed and unconcealed … ",
+  "pli-tv-kd13:28.1.7": "He’s to be sent back to the beginning. ",
+  "pli-tv-kd13:28.1.8": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense. ",
+  "pli-tv-kd13:28.1.9": "It may be that a monk on probation commits a number of offenses entailing suspension, unconcealed and unspecified … ",
+  "pli-tv-kd13:28.1.10": "concealed and unspecified … ",
+  "pli-tv-kd13:28.1.11": "both concealed and unconcealed and unspecified … ",
   "pli-tv-kd13:28.1.12": "unconcealed and both specified and unspecified … ",
   "pli-tv-kd13:28.1.13": "concealed and both specified and unspecified … ",
   "pli-tv-kd13:28.1.14": "both concealed and unconcealed and both specified and unspecified. ",
-  "pli-tv-kd13:28.1.15": "That monk is to be sent back to the beginning. ",
-  "pli-tv-kd13:28.1.16": "He should then be given probation according to the length of the concealment of the offenses and simultaneously with the probation for the previous offense. ",
+  "pli-tv-kd13:28.1.15": "He’s to be sent back to the beginning. ",
+  "pli-tv-kd13:28.1.16": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense. ",
   "pli-tv-kd13:28.2.1": "It may be that a monk who deserves the trial period of six days … ",
   "pli-tv-kd13:28.2.2": "who is undertaking the trial period of six days … ",
   "pli-tv-kd13:28.2.3": "(To be expanded as for probation.) ",
