--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1359,11 +1359,11 @@
   "pli-tv-kd13:29.2.18": "and then disrobes. Being re-ordained, he conceals all of them. ",
   "pli-tv-kd13:29.2.20": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.3.1": "“It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.3.2": "He knows about some of the offenses, but not others. ",
-  "pli-tv-kd13:29.3.3": "He conceals the offenses he knows about, ",
-  "pli-tv-kd13:29.3.4": "but not those he doesn’t know about. ",
-  "pli-tv-kd13:29.3.5": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals none of them. ",
-  "pli-tv-kd13:29.3.7": "That monk should be given probation according to the length of the earlier concealment of that class of offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.3.2": "He’s aware of some of them, but not others. ",
+  "pli-tv-kd13:29.3.3": "He conceals the offenses he’s aware of, ",
+  "pli-tv-kd13:29.3.4": "but not those he’s not aware of. ",
+  "pli-tv-kd13:29.3.5": "He then disrobes. Being re-ordained and having found out about all of them, he conceals none of them. ",
+  "pli-tv-kd13:29.3.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.3.8": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.3.9": "He knows about some of the offenses, but not others. ",
   "pli-tv-kd13:29.3.10": "He conceals the offenses he knows about, ",
