--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1379,10 +1379,10 @@
   "pli-tv-kd13:29.3.20": "but not those he wasn’t aware of. ",
   "pli-tv-kd13:29.3.21": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.3.22": "It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.3.23": "He knows about some of the offenses, but not others. ",
-  "pli-tv-kd13:29.3.24": "He conceals the offenses he knows about, ",
-  "pli-tv-kd13:29.3.25": "but not those he doesn’t know about. ",
-  "pli-tv-kd13:29.3.26": "He then disrobes. Being re-ordained and having found out about all the offenses, he conceals all of them. ",
+  "pli-tv-kd13:29.3.23": "He’s aware of some of them, but not others. ",
+  "pli-tv-kd13:29.3.24": "He conceals the offenses he’s aware of, ",
+  "pli-tv-kd13:29.3.25": "but not those he’s not aware of. ",
+  "pli-tv-kd13:29.3.26": "He then disrobes. Being re-ordained and having found out about all of them, he conceals all of them. ",
   "pli-tv-kd13:29.3.28": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.4.1": "“It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.4.2": "He remembers some of the offenses, but not others. ",
