--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1417,12 +1417,12 @@
   "pli-tv-kd13:29.5.5": "He then disrobes. Being re-ordained and having become sure of all of them, he conceals none of them. ",
   "pli-tv-kd13:29.5.7": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.5.8": "It may be that a monk commits a number of offenses entailing suspension. ",
-  "pli-tv-kd13:29.5.9": "He’s sure of some of the offenses, but unsure of others. ",
+  "pli-tv-kd13:29.5.9": "He’s sure of some of them, but unsure of others. ",
   "pli-tv-kd13:29.5.10": "He conceals the offenses he’s sure of, ",
   "pli-tv-kd13:29.5.11": "but not those he’s unsure of. ",
-  "pli-tv-kd13:29.5.12": "He then disrobes. Being re-ordained and having become sure of all the offenses, he doesn’t conceal those offenses he previously was sure of, ",
+  "pli-tv-kd13:29.5.12": "He then disrobes. Being re-ordained and having become sure of all of them, he doesn’t conceal those offenses he previously was sure of, ",
   "pli-tv-kd13:29.5.13": "but he conceals those he was unsure of. ",
-  "pli-tv-kd13:29.5.14": "That monk should be given probation according to the length of the earlier and subsequent concealment of that class of offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.5.14": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
   "pli-tv-kd13:29.5.15": "It may be that a monk commits a number of offenses entailing suspension. ",
   "pli-tv-kd13:29.5.16": "He’s sure of some of the offenses, but unsure of others. ",
   "pli-tv-kd13:29.5.17": "He conceals the offenses he’s sure of, ",
